--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -1,6 +1,15 @@
 body {
     background: #fafafa;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 768px;
+    margin: 0;
+    padding: 0;
 }
+
+div#Main {}
+
+    div#Main form.post {
+        display: inline;
+    }
+
+    div#Main div#Overview {
+        margin: 1em auto 1em auto;
+    }
