--- a/src/main/resources/static/style/profile.css
+++ b/src/main/resources/static/style/profile.css
@@ -1,3 +1,9 @@
-#Account {
+img.profileImage.small {
+    width: 32px;
+    height: 32px;
+}
 
+img.profileImage.large {
+    width: 128px;
+    height: 128px;
 }
