improve post styling some more (incl. centering!)

--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -11,5 +11,8 @@ div#Main {}
     }
 
     div#Main div#Overview {
+        display: flex;
+        flex-direction: column;
+
         margin: 1em auto 1em auto;
     }
