revamped the profile page

--- a/src/main/resources/static/style/etc.css
+++ b/src/main/resources/static/style/etc.css
@@ -1,7 +1,6 @@
+.inline { display: inline; }
 
-.inline {
-    display: inline;
-}
+.hidden { display: none; }
 
 button.link {
     background: none;
