--- a/src/main/resources/static/style/profile.css
+++ b/src/main/resources/static/style/profile.css
@@ -7,3 +7,22 @@ img.profileImage.large {
     width: 128px;
     height: 128px;
 }
+
+#Account {
+    display: flex;
+    align-items: end;
+
+    border-bottom: 2px solid black;
+    box-shadow: 1px 1px rgba(0, 0, 0, 0.25);
+    margin-bottom: 1.5em;
+    padding-left: 1em;
+}
+
+#AccountInfo {
+    padding-left: 1em;
+}
+
+    #AccountInfo .accountName {
+        font-size: 24pt;
+        font-weight: bold;
+    }
