vastly improve the basic design of the site (#16)
This is a complete overhaul of the entire website, and includes a
number of refactors as well.

The controllers have been separated into:  
* `AccountController` which manages displaying an account  
  * `/account/{id}` displays an overview of the account with the 
    given `id`
  * `/account/{username}` displays an overview of the account
    with the given `username`
* `HomeController` which displays a home screen and allows for 
   signing in registration
  * `/` provides a welcome screen if not logged in, otherwise it
     displays the current user's feed.
* `PostController` which still manages only submitting posts
   * `/post/submit` creates a post then redirects to the previous URL
* `RegistrationController` now manages registration exclusively
  * `/profile` both displays a registration form for creating an account
    and submissions of the form
  * `/page` both displays a registration form for creating a Page and
    handles submissions of the form
* `SignInController` manages account sign in/out
   * `/signin` displays a login form and handles its submission
   * `/signout` simply invalidates the login cookie on the client.

The templates for these pages have been completely reorganized
and rewritten as well.

This also fixes a problem in `CreatePost` where an old column 
name was being referenced.

--- a/src/main/resources/static/style/profile.css
+++ b/src/main/resources/static/style/profile.css
@@ -1,12 +1,28 @@
+img.profileImage.small {
+    width: 32px;
+    height: 32px;
+}
+
+img.profileImage.large {
+    width: 128px;
+    height: 128px;
+}
+
 #Account {
+    display: flex;
+    align-items: end;
 
+    border-bottom: 2px solid black;
+    box-shadow: 1px 1px rgba(0, 0, 0, 0.25);
+    margin-bottom: 1.5em;
+    padding-left: 1em;
 }
 
-span#AccountInfo {
-    font-size: 24pt;
+#AccountInfo {
+    padding-left: 1em;
 }
 
-span#AccountInfo img.profileImage {
-    width: 150px;
-    height: 150px;
-}
+    #AccountInfo .accountName {
+        font-size: 24pt;
+        font-weight: bold;
+    }
