--- a/src/main/resources/static/style/etc.css
+++ b/src/main/resources/static/style/etc.css
@@ -13,4 +13,5 @@ button.link {
 .flex-vertical { display: flex; flex-direction: column; }
 .flex-horizontal { display: flex; flex-direction: row; }
 
-
+.ui { color: rgba(0, 0, 0, 0.60)}
+.important { color: black; font-weight: bold; }
