fix form styling

--- a/src/main/resources/static/style/post.css
+++ b/src/main/resources/static/style/post.css
@@ -52,7 +52,7 @@ div.post {
         font-size: 8pt;
     }
 
-form.post {
+.postbox {
     align-self: center;
     display: flex;
     flex-direction: column;
