--- a/src/main/resources/static/style/etc.css
+++ b/src/main/resources/static/style/etc.css
@@ -15,3 +15,7 @@ button.link {
 
 .ui { color: rgba(0, 0, 0, 0.60)}
 .important { color: black; font-weight: bold; }
+
+#Outline {
+    flex-direction: row-reverse;
+}
