--- a/src/main/resources/static/style/profile.css
+++ b/src/main/resources/static/style/profile.css
@@ -8,6 +8,11 @@ img.profileImage.large {
     height: 128px;
 }
 
+img#headerImage {
+    width: 100%;
+    max-height: 48%;
+}
+
 #Account {
     display: flex;
     align-items: end;
