--- a/src/main/resources/static/style/etc.css
+++ b/src/main/resources/static/style/etc.css
@@ -27,6 +27,10 @@ button.link {
 div#Main form {
     display: flex;
     flex-direction: column;
+    max-width: 512px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 div#Main form > label {
