--- a/src/main/resources/static/style/nav.css
+++ b/src/main/resources/static/style/nav.css
@@ -2,22 +2,24 @@ nav {
     width: 100%;
     background-color: #bf0a30;
     padding: 1.5em 0 0.5em 0;
+    margin-bottom: 1em;
 }
 
-nav > ul {
-    list-style: none;
-}
-
-nav > ul > li {
-    display: inline;
+nav h4 {
+    font-size: 24pt;
+    color: white;
+    padding-left: 0.5em;
+    margin: 0;
 }
 
 nav a,
-nav .link,
-nav li {
+nav .link {
     color: rgba(255, 255, 255, 0.90) !important;
     font-weight: bold;
     text-decoration: none !important;
+
+    padding-left: 0.5em;
+    padding-right: 0.5em;
 }
 
 nav a:hover,
