--- a/src/main/resources/static/style/post.css
+++ b/src/main/resources/static/style/post.css
@@ -3,16 +3,8 @@ div.post {
     align-self: center;
     flex-direction: row;
     align-content: space-between;
-
-    background: white;
-    border: 1px solid black;
-    box-shadow: 1px 1px inset rgba(0, 0, 0, 0.30),
-                2px 2px rgba(0, 0, 0, 0.20);
     margin-bottom: 0.5em;
     margin-top: 0.5em;
-
-    width: 100%;
-    max-width: 512px;
 }
 
     .post p {
@@ -56,8 +48,11 @@ div.post {
     align-self: center;
     display: flex;
     flex-direction: column;
+    width: 100%;
+}
 
-    max-width: 512px;
+#PostTypeSelector {
+    align-self: center;
     width: 100%;
 }
 
