--- a/src/main/resources/static/style/etc.css
+++ b/src/main/resources/static/style/etc.css
@@ -13,8 +13,14 @@ button.link {
 ul.no-items { list-style: none; margin: 0; padding: 0; }
 
 .flex-vertical { display: flex; flex-direction: column; }
+.align-center > * { align-self: center; }
 .flex-horizontal { display: flex; flex-direction: row; }
 .flex-expand { flex-grow: 1; }
+
+.searchbar > i.fa-search:hover { cursor: pointer; }
+.searchbar > input { width: 0; transition: width 0.2s ease-in; }
+.searchbar:hover > input,
+.searchbar > input:focus { width: 200px !important; }
 
 .page {
     background: white;
