--- a/src/main/resources/static/style/etc.css
+++ b/src/main/resources/static/style/etc.css
@@ -22,6 +22,19 @@ ul.no-items { list-style: none; margin: 0; padding: 0; }
 .searchbar:hover > input,
 .searchbar > input:focus { width: 200px !important; }
 
+.dropdown { position: relative; display: inline-block; }
+.dropdown-content {
+    display: none;
+    min-width: 200px;
+    position: absolute;
+    background-color: #fafafa;
+    border: 1px solid black;
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    top: 0.75em;
+}
+.dropdown:hover .dropdown-content { display: block; }
+
 .page {
     background: white;
     padding: 2em;
