--- a/src/main/resources/static/style/nav.css
+++ b/src/main/resources/static/style/nav.css
@@ -2,6 +2,8 @@ nav {
     width: 100%;
     background-color: #bf0a30;
     padding: 1.5em 0 1.5em 0;
+    z-index: 1;
+    box-shadow: 1px 1px rgba(0, 0, 0, 0.20);
 }
 
 nav h4 {
